<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="15dp">

    <TextView
        android:id="@+id/dashboard_pending_notification_event_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/dashboard_pending_notification_label_start_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:text="@string/text_start_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/dashboard_pending_notification_label_between_dates"
        app:layout_constraintStart_toEndOf="@+id/dashboard_pending_notification_label_between_dates" />

    <TextView
        android:id="@+id/dashboard_pending_notification_label_end_date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:text="@string/text_end_date"
        app:layout_constraintBaseline_toBaselineOf="@+id/dashboard_pending_notification_label_and"
        app:layout_constraintStart_toEndOf="@+id/dashboard_pending_notification_label_and" />

    <TextView
        android:id="@+id/dashboard_pending_notification_label_host"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_host"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:layout_editor_absoluteX="365dp"
        tools:layout_editor_absoluteY="15dp" />

    <TextView
        android:id="@+id/dashboard_pending_notification_label_between_dates"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="15dp"
        android:text="@string/text_between"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_pending_notification_event_title" />

    <TextView
        android:id="@+id/dashboard_pending_notification_label_and"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:text="@string/text_and"
        app:layout_constraintBaseline_toBaselineOf="@+id/dashboard_pending_notification_label_start_date"
        app:layout_constraintStart_toEndOf="@+id/dashboard_pending_notification_label_start_date" />


    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginTop="14dp"
        android:background="@color/black"
        app:layout_constraintTop_toBottomOf="@+id/button_dashboar_accept_pending"
        tools:layout_editor_absoluteX="13dp" />

    <Button
        android:id="@+id/button_dashboar_accept_pending"
        android:layout_width="wrap_content"
        android:layout_height="48dp"
        android:layout_marginStart="36dp"
        android:layout_marginTop="8dp"
        android:text="@string/text_accept"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboard_pending_notification_label_between_dates" />


</androidx.constraintlayout.widget.ConstraintLayout>