<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.profile.UpdateProfileFragment">


    <EditText
        android:id="@+id/input_username"

        android:layout_width="wrap_content"
        android:layout_height="55dp"
        android:layout_marginStart="12dp"
        android:ems="10"
        android:hint="@string/text_username"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="@+id/label_username"
        app:layout_constraintTop_toBottomOf="@+id/label_username"/>

    <TextView
        android:id="@+id/label_username"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="24dp"
        android:layout_weight="1"
        android:text="@string/text_username"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_update_profile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="@string/text_update"
        app:layout_constraintStart_toEndOf="@+id/input_username"
        app:layout_constraintTop_toTopOf="@+id/input_username" />

    <EditText
        android:id="@+id/input_old_password"
        android:layout_width="217dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/label_old_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/label_old_password"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <EditText
        android:id="@+id/input_new_password"
        android:layout_width="217dp"
        android:layout_height="48dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:ems="10"
        android:hint="@string/label_new_password"
        android:inputType="textPassword"
        app:layout_constraintStart_toEndOf="@+id/label_new_password"
        app:layout_constraintTop_toBottomOf="@+id/input_old_password" />

    <TextView
        android:id="@+id/label_new_password"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="28dp"
        android:text="@string/label_new_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/label_old_password" />

    <TextView
        android:id="@+id/label_old_password"
        android:layout_width="wrap_content"
        android:layout_height="23dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="48dp"
        android:text="@string/label_old_password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_username" />

    <Button
        android:id="@+id/button_change_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:text="@string/text_change_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/input_new_password" />

</androidx.constraintlayout.widget.ConstraintLayout>