<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    android:label="Add Account"
    app:startDestination="@+id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.androidproject.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/navigation_requests"
        android:name="com.example.androidproject.ui.dashboard.DashboardFragment"
        android:label="@string/title_dashboard"
        tools:layout="@layout/fragment_dashboard" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.androidproject.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile">
        <action
            android:id="@+id/action_navigation_profile_to_update_profile"
            app:destination="@id/update_profile" />
        <action
            android:id="@+id/action_navigation_profile_to_add_account"
            app:destination="@id/add_account" />
    </fragment>
    <fragment
        android:id="@+id/update_profile"
        android:name="com.example.androidproject.ui.profile.UpdateProfileFragment"
        android:label="Update Profile"
        tools:layout="@layout/fragment_update_profile">
        <action
            android:id="@+id/action_update_profile_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
    <fragment
        android:id="@+id/add_account"
        android:name="com.example.androidproject.ui.profile.AddAccountFragment"
        android:label="fragment_add_account"
        tools:layout="@layout/fragment_add_account">
        <action
            android:id="@+id/action_add_account_to_navigation_profile"
            app:destination="@id/navigation_profile" />
    </fragment>
</navigation>